--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiger</title>
-    <link rel="icon" href="images/tigerHad.svg" />
+    <link rel="icon" href="images/tigerHad1.svg" />
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
